[tool.poetry]
name = "snmp-stream"
version = "0.1.0"
description = "Opinionated SNMP library for network analysis."
authors = ["Christopher Aubut <christopher@aubut.me>"]

build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
hypothesis = "*"
snmpsim = "*"
mypy = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
breathe = "*"
isort = "*"
pylint = "*"
flake8 = "*"
flake8-isort = "*"
flake8-docstrings = "*"
bandit = "*"
sphinx-autodoc-typehints = "*"

[tool.isort]
src_paths = ["snmp_stream"]
line_length = 100
known_first_party = ["snmp_stream", "tests"]
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
indent = "    "
multi_line_output = 5
default_section = "THIRDPARTY"
no_lines_before = "LOCALFOLDER"

[tool.pylint]
max-line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
